--- a/WebsiteFiles/index.html
+++ b/WebsiteFiles/index.html
@@ -11,7 +11,7 @@
     <style>
         .edgeLoad-EDGE-709357467 { visibility:hidden; }
     </style>
-<!--Adobe Edge Runtime End-->
+<!--Adobe Edge Runtime Ended-->
   
   <!-- Custom Style -->
   <link rel="stylesheet" type="text/css" href="style.css" />
